# yin-v2.0

./: README.md  pyproject.toml
app/: main.py  streamlit_app.py  yin.db
app/.streamlit/: config.toml  secrets.toml
app/db/: database.py  repositories.py  services.py
app/pages/: game.py  history.py  home.py
app/utils/: auth.py  exceptions.py
