[project]
name = "yin-app"
version = "0.0.1"
description = ""
authors = [
    {name = "Inte Vleminckx", email = "inte.vleminckx14@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.11"

requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
streamlit = "^1.50.0"
sqlalchemy = "^2.0.44"
